SortDrop classes were missing and now added

--- a/My_Theme_Collection/BubbleThemev3.theme.css
+++ b/My_Theme_Collection/BubbleThemev3.theme.css
@@ -2,7 +2,7 @@
  * @name Bubble Theme v3
  * @author ShadowDevilsAvenged
  * @description Bubbles, Bubbles and more Bubbles.
- * @version 3.1
+ * @version 3.2
  */
 
  .app-2CXKsg {
@@ -3241,7 +3241,7 @@
     box-shadow: inset 3px 3px 4px 3px rgba(243, 250, 254, 0.63), inset -8px -11px 9px -16px rgba(243, 250, 254, 0.53);
 }
 
-.sortButton-n-cIAH {
+.sortDropdown-hY93nR {
     border-radius: 4px;
     background-color: #1c1c1c;
 }
@@ -4212,7 +4212,7 @@
     color: white;
 }
 
-.sortDropdownEmptyTagsInner-1_xu2l {
+.sortDropdownInner-1kHAUi {
     color: white;
 }
 
@@ -4221,7 +4221,7 @@
     background-color: rgba(0, 0, 0, .3);
 }
 
-.sortDropdownEmptyTagsText-z_0OP1[style*="color:"] {
+.sortDropdownText-3smleu[style*="color:"] {
     color: white !important;
 }
 
