--- a/My_Theme_Collection/NightTimeMountain.theme.css
+++ b/My_Theme_Collection/NightTimeMountain.theme.css
@@ -2,7 +2,7 @@
  * @name Night Time Mountain
  * @author ShadowDevilsAvenged
  * @description Nice view of the mountain in the night time
- * @version 1.5
+ * @version 1.6
 */
 
 .app-2CXKsg {
@@ -2760,7 +2760,7 @@
     color: #D0DFFF !important;
 }
 
-.sortButton-n-cIAH {
+.sortDropdown-hY93nR {
     border-radius: 4px;
     background-color: #1c1c1c;
 }
@@ -4102,7 +4102,7 @@
     color: white;
 }
 
-.sortDropdownEmptyTagsInner-1_xu2l {
+.sortDropdownInner-1kHAUi {
     color: white;
 }
 
@@ -4111,7 +4111,7 @@
     background-color: rgba(0, 0, 0, .3);
 }
 
-.sortDropdownEmptyTagsText-z_0OP1[style*="color:"] {
+.sortDropdownText-3smleu[style*="color:"] {
     color: white !important;
 }
 
