--- a/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
+++ b/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old-Akame_Ga_Kill-Theme
  * @author ShadowDevilsAvenged
  * @description Akame from Akame No Kill
- * @version 4
+ * @version 4.1
  */
 
  #app-mount .app-2CXKsg {
@@ -3538,7 +3538,7 @@ background-color: transparent;
 border-top-color: #9b2742;
 }
 
-.sortButton-n-cIAH {
+.sortDropdown-hY93nR {
   border-radius: 4px;
   background-color: #1c1c1c;
 }
@@ -4483,7 +4483,7 @@ border-top-color: #9b2742;
   color: white;
 }
 
-.sortDropdownEmptyTagsInner-1_xu2l {
+.sortDropdownInner-1kHAUi {
   color: white;
 }
 
@@ -4492,7 +4492,7 @@ border-top-color: #9b2742;
   background-color: rgba(0, 0, 0, .3);
 }
 
-.sortDropdownEmptyTagsText-z_0OP1[style*="color:"] {
+.sortDropdownText-3smleu[style*="color:"] {
   color: white !important;
 }
 
