--- a/My_Theme_Collection/NewAkameGaKill.theme.css
+++ b/My_Theme_Collection/NewAkameGaKill.theme.css
@@ -2,7 +2,7 @@
  * @name New Akame Ga Kill! Theme
  * @author ShadowDevilsAvenged
  * @description Newer Akame Ga Kill! theme for my return
- * @version 4
+ * @version 4.1
  */
 
 /* Main Background */
@@ -2933,7 +2933,7 @@
   border-top-color: #912;
 }
 
-.sortButton-n-cIAH {
+.sortDropdown-hY93nR {
     border-radius: 4px;
     background-color: #1c1c1c;
 }
@@ -3926,7 +3926,7 @@
     color: white;
 }
 
-.sortDropdownEmptyTagsInner-1_xu2l {
+.sortDropdownInner-1kHAUi {
     color: white;
 }
 
@@ -3935,7 +3935,7 @@
     background-color: rgba(0, 0, 0, .3);
 }
 
-.sortDropdownEmptyTagsText-z_0OP1[style*="color:"] {
+.sortDropdownText-3smleu[style*="color:"] {
     color: white !important;
 }
 
