--- a/My_Theme_Collection/NewBNHA.theme.css
+++ b/My_Theme_Collection/NewBNHA.theme.css
@@ -2,7 +2,7 @@
  * @name New BNHA Theme
  * @author ShadowDevilsAvenged
  * @description Newer BNHA theme for my return
- * @version 4
+ * @version 4.1
  */
 
 /* Main Background */
@@ -2852,7 +2852,7 @@
   border-top-color: #2AB;
 }
 
-.sortButton-n-cIAH {
+.sortDropdown-hY93nR {
     border-radius: 4px;
     background-color: #1c1c1c;
 }
@@ -3834,7 +3834,7 @@
     color: white;
 }
 
-.sortDropdownEmptyTagsInner-1_xu2l {
+.sortDropdownInner-1kHAUi {
     color: white;
 }
 
@@ -3843,7 +3843,7 @@
     background-color: rgba(0, 0, 0, .3);
 }
 
-.sortDropdownEmptyTagsText-z_0OP1[style*="color:"] {
+.sortDropdownText-3smleu[style*="color:"] {
     color: white !important;
 }
 
