--- a/My_Theme_Collection/Youtube_Nation.theme.css
+++ b/My_Theme_Collection/Youtube_Nation.theme.css
@@ -2,7 +2,7 @@
  * @name Youtube Nation
  * @author ShadowDevilsAvenged
  * @description The Storage of All Videos
- * @version 1.2
+ * @version 1.3
 */
 
 .app-2CXKsg, 
@@ -66,6 +66,11 @@
 @keyframes tooltip-fade {
     from {opacity: 0;}
     to {opacity: 1;}
+}
+
+.sortDropdown-hY93nR {
+    border-radius: 4px;
+    background-color: #1c1c1c;
 }
 
 .header-1w9Q93 {
@@ -3017,12 +3022,12 @@
     color: #3ea6ff;
 }
 
-.sortDropdownEmptyTagsInner-1_xu2l,
+.sortDropdownInner-1kHAUi,
 .tagsButton-4pwOKH .tagsButtonInner-2pvSm1 {
     color: white;
 }
 
-.sortDropdownEmptyTagsText-z_0OP1[style*="color:"] {
+.sortDropdownText-3smleu[style*="color:"] {
     color: white !important;
 }
 
