--- a/My_Theme_Collection/TeamRam.theme.css
+++ b/My_Theme_Collection/TeamRam.theme.css
@@ -2,7 +2,7 @@
  * @name Team Ram
  * @author ShadowDevilsAvenged
  * @description Team Ram is back once again(big request to bring this back)
- * @version 1.8
+ * @version 1.9
 */
 
 /* Ram Main Picture */
@@ -1002,7 +1002,7 @@
 /* ************* Discord Settings Done ************* */
 
 .wrapper-1_HaEi,
-.scroller-3X7KbA {
+.theme-dark .scroller-3X7KbA {
     background-color: transparent;
 }
 
@@ -1040,10 +1040,7 @@
 
 /* ************* Discord Settings Done ************* */
 
-.wrapper-1_HaEi,
-.scroller-3X7KbA {
-    background-color: transparent;
-}
+
 
 .unread-2wipsx {
     background-color: black;
@@ -1083,7 +1080,7 @@
 }
 
 .privateChannels-oVe7HL,
-.scroller-WSmht3,
+.theme-dark .scroller-WSmht3,
 #app-mount .container-ZMc96U,
 .container-1oAagU,
 .container-2cd8Mz {
@@ -2572,7 +2569,7 @@
     background-color: rgba(0, 0, 0, .2);
 }
 
-.container-1NXEtd,
+.theme-dark .container-1NXEtd,
 .scroller-3_YDR2 {
     background-color: transparent;
 }
@@ -2689,6 +2686,7 @@
 
 .container-1zzFcN {
     border-bottom: none;
+    background: none;
 }
 
 .markup-eYLPri code,
@@ -4124,4 +4122,16 @@
 
 .hljs {
     background: rgba(255,255,255,.12);
+}
+
+.chatContent-3KubbW {
+    background: none;
+}
+
+.formTitle-2YQyhj {
+    color: #c0c0c0;
+}
+
+.theme-dark .container-YkUktl  {
+    background-color: transparent;
 }
