--- a/My_Theme_Collection/TeamRem.theme.css
+++ b/My_Theme_Collection/TeamRem.theme.css
@@ -2,7 +2,7 @@
  * @name Team Rem
  * @author ShadowDevilsAvenged
  * @description Team Rem is back once again(big request to bring this back)
- * @version 1.8
+ * @version 1.9
 */
 
 /* Rem Main Picture */
@@ -321,7 +321,7 @@
     border-radius: 4px;
 }
 
-.scrollableContainer-15eg7h {
+.theme-dark .scrollableContainer-15eg7h {
     background-color: transparent;
     border-radius: 4px;
 }
@@ -1007,7 +1007,7 @@
 /* ************* Discord Settings Done ************* */
 
 .wrapper-1_HaEi,
-.scroller-3X7KbA {
+.theme-dark .scroller-3X7KbA {
     background-color: transparent;
 }
 
@@ -1049,7 +1049,7 @@
 }
 
 .privateChannels-oVe7HL,
-.scroller-WSmht3,
+.theme-dark .scroller-WSmht3,
 #app-mount .container-ZMc96U,
 .container-1oAagU,
 .container-2cd8Mz {
@@ -2538,7 +2538,7 @@
     background-color: rgba(0, 0, 0, .2);
 }
 
-.container-1NXEtd,
+.theme-dark .container-1NXEtd,
 .scroller-3_YDR2 {
     background-color: transparent;
 }
@@ -2655,6 +2655,7 @@
 
 .container-1zzFcN {
     border-bottom: none;
+    background: none;
 }
 
 .markup-eYLPri code,
@@ -4090,4 +4091,16 @@
 
 .hljs {
     background: rgba(255,255,255,.12);
+}
+
+.chatContent-3KubbW {
+    background: none;
+}
+
+.formTitle-2YQyhj {
+    color: #c0c0c0;
+}
+
+.theme-dark .container-YkUktl  {
+    background-color: transparent;
 }
