--- a/My_Theme_Collection/NewAkameGaKill.theme.css
+++ b/My_Theme_Collection/NewAkameGaKill.theme.css
@@ -2,7 +2,7 @@
  * @name New Akame Ga Kill! Theme
  * @author ShadowDevilsAvenged
  * @description Newer Akame Ga Kill! theme for my return
- * @version 4.2
+ * @version 4.3
  */
 
 /* Main Background */
@@ -2595,7 +2595,7 @@
     border-top: none;
     color: gold;
 }
-.root-g14mjS.modal-ZdazA8 {
+.root-g14mjS.modal-3fnj3y {
     background-attachment: fixed;
     background-image: -webkit-linear-gradient(56deg, #000000 20%, rgb(153, 17, 33, .8) 75%);
 }
@@ -3900,7 +3900,7 @@
     background-color: rgba(0, 0, 0, .3);
 }
 
-.staticToolbar-x12NJC,
+.theme-dark .staticToolbar-x12NJC,
 .forumGuidelines-1U9ThN {
     background-color: rgba(0, 0, 0, .2);
 }
@@ -4174,6 +4174,29 @@
 
 .theme-dark .container-YkUktl  {
     background-color: transparent;
+}
+
+.analyticsCard-2fnrVG {
+    background-color: rgba(0, 0, 0, .3);
+}
+
+.friendRequestsButton-77veU7 {
+    background-color: rgba(255, 255, 255, .15);
+    color: white;
+}
+
+.friendRequestsButton-77veU7:hover {
+    background-color: rgba(255, 255, 255, .25);
+
+}
+
+.container-_dQaft,
+.container-1A0qQO {
+    background-color: #212121;
+}
+
+.row-7jGzPR:hover {
+    background-color: rgba(255, 255, 255, .15);
 }
 /* Main Color */
 .main-color{color: #912;}
