--- a/My_Theme_Collection/NewRemTheme.theme.css
+++ b/My_Theme_Collection/NewRemTheme.theme.css
@@ -2,7 +2,7 @@
  * @name New Rem Theme
  * @author ShadowDevilsAvenged
  * @description Newer Rem theme for my return
- * @version 4.2
+ * @version 4.3
  */
 
  .app-2CXKsg {
@@ -615,6 +615,7 @@
     border-radius: 4px;
     background-attachment: fixed;
 }
+
 
 .browser-mnQ1T7 {
     border: #40cfff 2px groove;
@@ -2649,7 +2650,7 @@
     border-top: none;
     color: gold;
 }
-.root-g14mjS.modal-ZdazA8 {
+.root-g14mjS.modal-3fnj3y {
     background-attachment: fixed;
     background-image: -webkit-repeating-linear-gradient(-48deg, #000000 30%, #1a1a1a 35%);
     border-radius: 4px;
@@ -3801,7 +3802,7 @@
     background-color: rgba(0, 0, 0, .3);
 }
 
-.staticToolbar-x12NJC,
+.theme-dark .staticToolbar-x12NJC,
 .forumGuidelines-1U9ThN {
     background-color: rgba(0, 0, 0, .2);
 }
@@ -4064,6 +4065,29 @@
 
 .theme-dark .container-YkUktl  {
     background-color: transparent;
+}
+
+.analyticsCard-2fnrVG {
+    background-color: rgba(0, 0, 0, .3);
+}
+
+.friendRequestsButton-77veU7 {
+    background-color: rgba(255, 255, 255, .15);
+    color: white;
+}
+
+.friendRequestsButton-77veU7:hover {
+    background-color: rgba(255, 255, 255, .25);
+
+}
+
+.container-_dQaft,
+.container-1A0qQO {
+    background-color: #212121;
+}
+
+.row-7jGzPR:hover {
+    background-color: rgba(255, 255, 255, .15);
 }
 
 /* Main Color */
