--- a/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
+++ b/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old-Akame_Ga_Kill-Theme
  * @author ShadowDevilsAvenged
  * @description Akame from Akame No Kill
- * @version 4.2
+ * @version 4.3
  */
 
  #app-mount .app-2CXKsg {
@@ -2812,6 +2812,7 @@
   background-color: #380d0d;
 }
 
+
 .clear-2gkgln,
 .clear-wwSgAl {
   color: gold;
@@ -3202,7 +3203,7 @@
   border-top: none;
   color: gold;
 }
-.root-g14mjS.modal-ZdazA8 {
+.root-g14mjS.modal-3fnj3y {
   background-color: #380d0d !important;
 }
 
@@ -4457,7 +4458,7 @@ border-top-color: #9b2742;
   background-color: rgba(0, 0, 0, .3);
 }
 
-.staticToolbar-x12NJC,
+.theme-dark .staticToolbar-x12NJC,
 .forumGuidelines-1U9ThN {
   background-color: rgba(0, 0, 0, .2);
 }
@@ -4727,4 +4728,27 @@ border-top-color: #9b2742;
 
 .theme-dark .container-YkUktl  {
   background-color: transparent;
+}
+
+.analyticsCard-2fnrVG {
+  background-color: rgba(0, 0, 0, .3);
+}
+
+.friendRequestsButton-77veU7 {
+  background-color: rgba(255, 255, 255, .15);
+  color: white;
+}
+
+.friendRequestsButton-77veU7:hover {
+  background-color: rgba(255, 255, 255, .25);
+
+}
+
+.container-_dQaft,
+.container-1A0qQO {
+  background-color: #212121;
+}
+
+.row-7jGzPR:hover {
+  background-color: rgba(255, 255, 255, .15);
 }
