--- a/My_Theme_Collection/Old-BNHA-Theme.theme.css
+++ b/My_Theme_Collection/Old-BNHA-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old BNHA Theme Returns
  * @author ShadowDevilsAvenged
  * @description Say Hello to the BNHA theme once again
- * @version 4.2
+ * @version 4.3
 */
 
 @import url("https://fonts.googleapis.com/css?family=Livvic&display=swap");
@@ -2674,7 +2674,7 @@ textarea,
     color: gold;
 }
 
-.root-g14mjS.modal-ZdazA8 {
+.root-g14mjS.modal-3fnj3y {
     background-color: transparent;
     background-attachment: fixed;
     background-image: linear-gradient(to bottom left, #454545 21%, #000000 100%);
@@ -2684,6 +2684,11 @@ textarea,
     background-color: transparent;
     background-attachment: fixed;
     background-image: linear-gradient(to bottom left, #454545 21%, #000000 100%);
+}
+
+.container-2rzKKA {
+    background-color: rgba(0, 0, 0, .2) !important;
+    border: 1px solid black !important;
 }
 
 .header-3_zmOb {
@@ -3971,7 +3976,7 @@ textarea,
     background-color: rgba(0, 0, 0, .3);
 }
 
-.staticToolbar-x12NJC,
+.theme-dark .staticToolbar-x12NJC,
 .forumGuidelines-1U9ThN {
     background-color: rgba(0, 0, 0, .2);
 }
@@ -4245,4 +4250,27 @@ textarea,
 
 .theme-dark .container-YkUktl  {
     background-color: transparent;
+}
+
+.analyticsCard-2fnrVG {
+    background-color: rgba(0, 0, 0, .3);
+}
+
+.friendRequestsButton-77veU7 {
+    background-color: rgba(255, 255, 255, .15);
+    color: white;
+}
+
+.friendRequestsButton-77veU7:hover {
+    background-color: rgba(255, 255, 255, .25);
+
+}
+
+.container-_dQaft,
+.container-1A0qQO {
+    background-color: #212121;
+}
+
+.row-7jGzPR:hover {
+    background-color: rgba(255, 255, 255, .15);
 }
