--- a/My_Theme_Collection/TeamRam.theme.css
+++ b/My_Theme_Collection/TeamRam.theme.css
@@ -2,7 +2,7 @@
  * @name Team Ram
  * @author ShadowDevilsAvenged
  * @description Team Ram is back once again(big request to bring this back)
- * @version 1.9
+ * @version 2
 */
 
 /* Ram Main Picture */
@@ -2346,6 +2346,14 @@
     background-color: #1c1c1c;
 }
 
+.header-3cSJjT {
+    background-color: transparent;
+}
+
+.container-3GP6AV {
+    background-color: transparent;
+}
+
 .closeIcon-11tHJX, 
 .threadIcon-rd1kqG {
     color: #f3acc5;
@@ -2409,7 +2417,7 @@
     color: black;
 }
 
-.modal-ZdazA8 {
+.modal-3fnj3y {
     background-color: #1c1c1c !important;
 }
 
@@ -3849,7 +3857,7 @@
     background-color: rgba(0, 0, 0, .3);
 }
 
-.staticToolbar-x12NJC,
+.theme-dark .staticToolbar-x12NJC,
 .forumGuidelines-1U9ThN {
     background-color: rgba(0, 0, 0, .2);
 }
@@ -4134,4 +4142,27 @@
 
 .theme-dark .container-YkUktl  {
     background-color: transparent;
+}
+
+.analyticsCard-2fnrVG {
+    background-color: rgba(0, 0, 0, .3);
+}
+
+.friendRequestsButton-77veU7 {
+    background-color: rgba(255, 255, 255, .15);
+    color: white;
+}
+
+.friendRequestsButton-77veU7:hover {
+    background-color: rgba(255, 255, 255, .25);
+
+}
+
+.container-_dQaft,
+.container-1A0qQO {
+    background-color: #212121;
+}
+
+.row-7jGzPR:hover {
+    background-color: rgba(255, 255, 255, .15);
 }
