--- a/My_Theme_Collection/Youtube_Nation.theme.css
+++ b/My_Theme_Collection/Youtube_Nation.theme.css
@@ -2,7 +2,7 @@
  * @name Youtube Nation
  * @author ShadowDevilsAvenged
  * @description The Storage of All Videos
- * @version 1.4
+ * @version 1.5
 */
 
 .app-2CXKsg, 
@@ -732,6 +732,10 @@
 .icon-mJhEWn {
     background-color: #FF0000;
     color: white;
+}
+
+.container-3GP6AV {
+    background-color: transparent;
 }
 
 .container-2rzKKA {
@@ -2199,13 +2203,17 @@
     color: #3ea6ff;
 }
 
-.modal-ZdazA8 {
+.modal-3fnj3y {
     background-color: #282828!important;
     border: 1px solid rgba(255, 255, 255, .1);
 }
 
-.modal-ZdazA8 .container-18GwIk{
+.modal-3fnj3y .container-18GwIk{
     border: none;
+}
+
+.header-3cSJjT {
+    background-color: transparent;
 }
 
 .wrapper-2SplAX,
@@ -3145,7 +3153,7 @@
     border: 1px solid rgba(255, 255, 255, .1);
 }
 
-.staticToolbar-x12NJC {
+.theme-dark .staticToolbar-x12NJC {
     background-color: #616161;
 }
 
@@ -4209,4 +4217,27 @@
 
 .theme-dark .container-YkUktl  {
     background-color: transparent;
+}
+
+.analyticsCard-2fnrVG {
+    background-color: rgba(0, 0, 0, .3);
+}
+
+.friendRequestsButton-77veU7 {
+    background-color: rgba(255, 255, 255, .15);
+    color: white;
+}
+
+.friendRequestsButton-77veU7:hover {
+    background-color: rgba(255, 255, 255, .25);
+
+}
+
+.container-_dQaft,
+.container-1A0qQO {
+    background-color: #212121;
+}
+
+.row-7jGzPR:hover {
+    background-color: rgba(255, 255, 255, .15);
 }
